// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Check correct api response 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex justify-end mt-10 mr-10"
      >
        <button
          class=" text-end bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded"
        >
          Refresh
        </button>
      </div>
      <div
        class="m-10"
      >
        <span
          class="text-rose-600 text-xl font-medium mx-0"
          data-testid="error_test"
        >
          Có lỗi xãy ra
        </span>
        <div
          class="grid gap-5 2 grid-cols-1 md:grid-cols-2 lg:grid-cols-4 xl:grid-cols-4"
        >
          <div
            class="flex w-full max-w-md mx-auto overflow-hidden rounded-lg shadow-lg bg-gray-300 animate-pulse dark:bg-gray-800"
          >
            <div
              class="h-60 w-max bg-gray-300 dark:bg-gray-600"
            />
          </div>
          <div
            class="flex w-full max-w-md mx-auto overflow-hidden rounded-lg shadow-lg bg-gray-300 animate-pulse dark:bg-gray-800"
          >
            <div
              class="h-60 w-max bg-gray-300 dark:bg-gray-600"
            />
          </div>
          <div
            class="flex w-full max-w-md mx-auto overflow-hidden rounded-lg shadow-lg bg-gray-300 animate-pulse dark:bg-gray-800"
          >
            <div
              class="h-60 w-max bg-gray-300 dark:bg-gray-600"
            />
          </div>
          <div
            class="flex w-full max-w-md mx-auto overflow-hidden rounded-lg shadow-lg bg-gray-300 animate-pulse dark:bg-gray-800"
          >
            <div
              class="h-60 w-max bg-gray-300 dark:bg-gray-600"
            />
          </div>
          <div
            class="flex w-full max-w-md mx-auto overflow-hidden rounded-lg shadow-lg bg-gray-300 animate-pulse dark:bg-gray-800"
          >
            <div
              class="h-60 w-max bg-gray-300 dark:bg-gray-600"
            />
          </div>
          <div
            class="flex w-full max-w-md mx-auto overflow-hidden rounded-lg shadow-lg bg-gray-300 animate-pulse dark:bg-gray-800"
          >
            <div
              class="h-60 w-max bg-gray-300 dark:bg-gray-600"
            />
          </div>
          <div
            class="flex w-full max-w-md mx-auto overflow-hidden rounded-lg shadow-lg bg-gray-300 animate-pulse dark:bg-gray-800"
          >
            <div
              class="h-60 w-max bg-gray-300 dark:bg-gray-600"
            />
          </div>
          <div
            class="flex w-full max-w-md mx-auto overflow-hidden rounded-lg shadow-lg bg-gray-300 animate-pulse dark:bg-gray-800"
          >
            <div
              class="h-60 w-max bg-gray-300 dark:bg-gray-600"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex justify-end mt-10 mr-10"
    >
      <button
        class=" text-end bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded"
      >
        Refresh
      </button>
    </div>
    <div
      class="m-10"
    >
      <span
        class="text-rose-600 text-xl font-medium mx-0"
        data-testid="error_test"
      >
        Có lỗi xãy ra
      </span>
      <div
        class="grid gap-5 2 grid-cols-1 md:grid-cols-2 lg:grid-cols-4 xl:grid-cols-4"
      >
        <div
          class="flex w-full max-w-md mx-auto overflow-hidden rounded-lg shadow-lg bg-gray-300 animate-pulse dark:bg-gray-800"
        >
          <div
            class="h-60 w-max bg-gray-300 dark:bg-gray-600"
          />
        </div>
        <div
          class="flex w-full max-w-md mx-auto overflow-hidden rounded-lg shadow-lg bg-gray-300 animate-pulse dark:bg-gray-800"
        >
          <div
            class="h-60 w-max bg-gray-300 dark:bg-gray-600"
          />
        </div>
        <div
          class="flex w-full max-w-md mx-auto overflow-hidden rounded-lg shadow-lg bg-gray-300 animate-pulse dark:bg-gray-800"
        >
          <div
            class="h-60 w-max bg-gray-300 dark:bg-gray-600"
          />
        </div>
        <div
          class="flex w-full max-w-md mx-auto overflow-hidden rounded-lg shadow-lg bg-gray-300 animate-pulse dark:bg-gray-800"
        >
          <div
            class="h-60 w-max bg-gray-300 dark:bg-gray-600"
          />
        </div>
        <div
          class="flex w-full max-w-md mx-auto overflow-hidden rounded-lg shadow-lg bg-gray-300 animate-pulse dark:bg-gray-800"
        >
          <div
            class="h-60 w-max bg-gray-300 dark:bg-gray-600"
          />
        </div>
        <div
          class="flex w-full max-w-md mx-auto overflow-hidden rounded-lg shadow-lg bg-gray-300 animate-pulse dark:bg-gray-800"
        >
          <div
            class="h-60 w-max bg-gray-300 dark:bg-gray-600"
          />
        </div>
        <div
          class="flex w-full max-w-md mx-auto overflow-hidden rounded-lg shadow-lg bg-gray-300 animate-pulse dark:bg-gray-800"
        >
          <div
            class="h-60 w-max bg-gray-300 dark:bg-gray-600"
          />
        </div>
        <div
          class="flex w-full max-w-md mx-auto overflow-hidden rounded-lg shadow-lg bg-gray-300 animate-pulse dark:bg-gray-800"
        >
          <div
            class="h-60 w-max bg-gray-300 dark:bg-gray-600"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Check error api response 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex justify-end mt-10 mr-10"
      >
        <button
          class=" text-end bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded"
        >
          Refresh
        </button>
      </div>
      <div
        class="m-10"
      >
        <div
          class="grid gap-5 2 grid-cols-1 md:grid-cols-2 lg:grid-cols-4 xl:grid-cols-4"
        >
          <div
            class="flex w-full max-w-md mx-auto overflow-hidden rounded-lg shadow-lg bg-gray-300 animate-pulse dark:bg-gray-800"
          >
            <div
              class="h-60 w-max bg-gray-300 dark:bg-gray-600"
            />
          </div>
          <div
            class="flex w-full max-w-md mx-auto overflow-hidden rounded-lg shadow-lg bg-gray-300 animate-pulse dark:bg-gray-800"
          >
            <div
              class="h-60 w-max bg-gray-300 dark:bg-gray-600"
            />
          </div>
          <div
            class="flex w-full max-w-md mx-auto overflow-hidden rounded-lg shadow-lg bg-gray-300 animate-pulse dark:bg-gray-800"
          >
            <div
              class="h-60 w-max bg-gray-300 dark:bg-gray-600"
            />
          </div>
          <div
            class="flex w-full max-w-md mx-auto overflow-hidden rounded-lg shadow-lg bg-gray-300 animate-pulse dark:bg-gray-800"
          >
            <div
              class="h-60 w-max bg-gray-300 dark:bg-gray-600"
            />
          </div>
          <div
            class="flex w-full max-w-md mx-auto overflow-hidden rounded-lg shadow-lg bg-gray-300 animate-pulse dark:bg-gray-800"
          >
            <div
              class="h-60 w-max bg-gray-300 dark:bg-gray-600"
            />
          </div>
          <div
            class="flex w-full max-w-md mx-auto overflow-hidden rounded-lg shadow-lg bg-gray-300 animate-pulse dark:bg-gray-800"
          >
            <div
              class="h-60 w-max bg-gray-300 dark:bg-gray-600"
            />
          </div>
          <div
            class="flex w-full max-w-md mx-auto overflow-hidden rounded-lg shadow-lg bg-gray-300 animate-pulse dark:bg-gray-800"
          >
            <div
              class="h-60 w-max bg-gray-300 dark:bg-gray-600"
            />
          </div>
          <div
            class="flex w-full max-w-md mx-auto overflow-hidden rounded-lg shadow-lg bg-gray-300 animate-pulse dark:bg-gray-800"
          >
            <div
              class="h-60 w-max bg-gray-300 dark:bg-gray-600"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex justify-end mt-10 mr-10"
    >
      <button
        class=" text-end bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded"
      >
        Refresh
      </button>
    </div>
    <div
      class="m-10"
    >
      <div
        class="grid gap-5 2 grid-cols-1 md:grid-cols-2 lg:grid-cols-4 xl:grid-cols-4"
      >
        <div
          class="flex w-full max-w-md mx-auto overflow-hidden rounded-lg shadow-lg bg-gray-300 animate-pulse dark:bg-gray-800"
        >
          <div
            class="h-60 w-max bg-gray-300 dark:bg-gray-600"
          />
        </div>
        <div
          class="flex w-full max-w-md mx-auto overflow-hidden rounded-lg shadow-lg bg-gray-300 animate-pulse dark:bg-gray-800"
        >
          <div
            class="h-60 w-max bg-gray-300 dark:bg-gray-600"
          />
        </div>
        <div
          class="flex w-full max-w-md mx-auto overflow-hidden rounded-lg shadow-lg bg-gray-300 animate-pulse dark:bg-gray-800"
        >
          <div
            class="h-60 w-max bg-gray-300 dark:bg-gray-600"
          />
        </div>
        <div
          class="flex w-full max-w-md mx-auto overflow-hidden rounded-lg shadow-lg bg-gray-300 animate-pulse dark:bg-gray-800"
        >
          <div
            class="h-60 w-max bg-gray-300 dark:bg-gray-600"
          />
        </div>
        <div
          class="flex w-full max-w-md mx-auto overflow-hidden rounded-lg shadow-lg bg-gray-300 animate-pulse dark:bg-gray-800"
        >
          <div
            class="h-60 w-max bg-gray-300 dark:bg-gray-600"
          />
        </div>
        <div
          class="flex w-full max-w-md mx-auto overflow-hidden rounded-lg shadow-lg bg-gray-300 animate-pulse dark:bg-gray-800"
        >
          <div
            class="h-60 w-max bg-gray-300 dark:bg-gray-600"
          />
        </div>
        <div
          class="flex w-full max-w-md mx-auto overflow-hidden rounded-lg shadow-lg bg-gray-300 animate-pulse dark:bg-gray-800"
        >
          <div
            class="h-60 w-max bg-gray-300 dark:bg-gray-600"
          />
        </div>
        <div
          class="flex w-full max-w-md mx-auto overflow-hidden rounded-lg shadow-lg bg-gray-300 animate-pulse dark:bg-gray-800"
        >
          <div
            class="h-60 w-max bg-gray-300 dark:bg-gray-600"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
